force-app/main/default/objects/Sentinel_Integration_Setting__mdt/Sentinel_Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Sentinel Integration Setting</label>
    <pluralLabel>Sentinel_Integration_Settings</pluralLabel>
</CustomObject>