force-app/main/default/objects/Sentinel_Integration_Setting__mdt/fields/Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Folder_ID__c</fullName>
    <label>Folder ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>