force-app/main/default/objects/Sentinel_Integration_Setting__mdt/fields/Mime_Type__c.field-meta.xml
<CustomField>
    <fullName>Mime_Type__c</fullName>
    <label>Mime Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>